<resources>
    <string name="app_name">才标商标起名</string>
    <string name="common_next">下一步</string>
    <string name="common_finish">完成</string>

    <!-- 自动加载列表控件 -->
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">加载更多</string>
    <string name="p2refresh_end_load_no_more">已经加载完毕</string>
    <string name="pinglun_end_load_no_more">已加载全部评论</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新…</string>
    <string name="p2refresh_doing_end_refresh">加载中…</string>
    <string name="p2refresh_refresh_lasttime">最后更新 : </string>

    <string name="toast_input_right_auth_code">验证码错误，请重新验证</string>
    <string name="toast_input_pwd">请输入6-20位密码</string>
    <string name="toast_input_mobile">请输入正确的手机号码</string>
    <string name="toast_input_auth_code">请输入验证码</string>
    <string name="toast_input_sure_pwd">请输入确认密码</string>
    <string name="toast_pwd_not_equal">两次密码设置不一致，请重新设置</string>
    <string name="progress_get_auth_code">正在获取验证码...</string>
    <string name="toast_resend">重新发送</string>
    <string name="success_get_auth_code">验证码获取成功</string>

    <string name="success_change_psw">新密码短信发送成功</string>
    <string name="format_count_down">重新发送%ds</string>

    <string name="register_mobile">手机号</string>
    <string name="send_check_code">获取验证码</string>
    <string name="register_check_code">验证码</string>

    <!-- 登录 -->
    <string name="progress_login">正在登录中...</string>
    <string name="success_login">登录成功</string>
    <string name="success_logout">退出登录</string>
    <string name="login_input_mobile">手机号码</string>
    <string name="digits_pwd">1234567890qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM`~!@#$%^*()_+-=,.?/{}[]\|;:"'&amp;</string>
    <string name="login_input_pwd">请输入密码</string>
    <string name="login_input_password">输入密码</string>
    <string name="login">登 录</string>
    <string name="title_login">登  录</string>
    <string name="login_register">快速注册</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="thirdLogin">   使用第三方账号登录   </string>
    <string name="login_mobile_phone">手机号</string>
    <string name="login_qq">QQ</string>
    <string name="login_weixin">微信</string>
    <string name="login_password">密\t\t 码</string>

    <!-- 注册 -->
    <string name="toast_agreement">请阅读并同意《才标网用户协议》</string>
    <string name="progress_register">正在注册中...</string>
    <string name="success_register">注册成功</string>
    <string name="register_pwd">请输入密码</string>
    <string name="register_username">请输入名字</string>
    <string name="register_sure_pwd">请再次输入一遍密码</string>
    <string name="register_agree">我已阅读并同意</string>
    <string name="register_audio_code_tip">还没收到短信验证码吗？试试</string>
    <string name="register_audio_code">语音验证码</string>
    <string name="register_agreement">《才标网用户协议》</string>

    <string name="publish">发 布</string>

    <!-- 重设密码  -->
    <string name="progress_reset_pwd">正在重设密码...</string>
    <string name="reset_success">修改成功</string>

    <string name="year">年后</string>
    <string name="month">月后</string>
    <string name="day_time">天后</string>
    <string name="hour">小时后</string>
    <string name="min">分钟后</string>
    <string name="sec">秒后</string>
</resources>
