<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="64.8dp"
        android:layout_height="76.4dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/icon_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_login_input_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15.6dp"
            android:layout_height="19.2dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_shoujihaoma" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#cfcfcf"></View>

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/login_input_mobile"
            android:inputType="phone"
            android:textColor="@color/bc_black_2"
            android:textColorHint="#cfcfcf"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_login_input_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="14.4dp"
            android:layout_height="17.6dp"
            android:layout_marginLeft="15.2dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_mima" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#cfcfcf"></View>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/login_input_password"
            android:inputType="textPassword"
            android:textColor="@color/bc_black_2"
            android:textColorHint="#cfcfcf"
            android:textSize="14dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/shape_login_submit_bg"
        android:gravity="center"
        android:text="@string/title_login"
        android:textColor="@color/bc_white"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/llRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:textColor="@color/bc_black_2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvForgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/login_forget_pwd"
            android:textColor="@color/bc_black_2"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/bc_login_line"></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirdLogin"
            android:textColor="@color/bc_black_2"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/bc_login_line"></View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:id="@+id/login_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="66dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_weixin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/login_weixin"
                android:textColor="@color/bc_black_2"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/login_qq"
                android:textColor="@color/bc_black_2"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>