<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bc_white"
    android:orientation="vertical">

    <com.bc.caibiao.view.TopBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        bc:textTitle="重新输入密码"
        bc:imageLeft="@drawable/icon_fanhui01"
        bc:textTitleColor="@color/forget_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="14dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_forget_pwd_input_bg"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="新密码"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:textColor="#636363"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="78dp"
                android:textColorHint="#d2d2d2"
                android:hint="@string/register_pwd"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:background="@null"
                android:digits="@string/digits_pwd"
                android:inputType="textPassword" />


        </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_forget_pwd_input_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="重复密码"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textColor="#636363"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etSurePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="78dp"
                    android:textColorHint="#d2d2d2"
                    android:layout_centerVertical="true"
                    android:hint="@string/register_sure_pwd"
                    android:textSize="14sp"
                    android:background="@null"
                    android:singleLine="true"
                    android:digits="@string/digits_pwd"
                    android:inputType="textPassword" />


            </RelativeLayout>



        <TextView
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@color/reg_yellow"
            android:text="确认"
            android:gravity="center"
            android:textColor="@color/bc_white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>